# rust-demo

./: Cargo.toml  Dockerfile  Makefile  README.md  init.sql  samplerequest.json  seqgen.yml
src/: dal.rs  db.rs  main.rs
