[package]
name = "test_sequence_web_application"
version = "0.1.0"
authors = ["Alex Wolff <akw5013@gmail.com>"]

[dependencies]
uuid= { version = "0.4", features = ["v4", "rustc-serialize"] }
iron="*"
persistent="*"
router = "*"
hyper = "*"
rustc-serialize = "*"
postgres = { version="*", features = ["with-uuid"] }
r2d2="*"
r2d2_postgres="*"