[package]
name = "sequence_number_generator"
version = "0.1.0"
authors = ["Alex Wolff <akw5013@gmail.com>"]

[dependencies]
serde="*"
serde_json = "*"
serde_derive = "*"
iron="*"
persistent="*"
router = "*"
hyper = "*"
uuid= { version = "0.4", features = ["serde", "v4"] }
postgres = { version="*", features = ["with-uuid"] }
r2d2="*"
r2d2_postgres="*"

[features]
integration_tests = []